# substrate

./: CHANGELOG.md  LICENSE  README.md  copier.yml  pyproject.toml  test.sh
.github/workflows/: release.yml  test.yml
template/: .gitignore.jinja  README.md.jinja  docker-compose.yml.jinja  pyproject.toml.jinja  zensical.toml.jinja  {% if license =='Apache-2.0' %}LICENSE{% endif %}  {% if license =='BSD-3-Clause' %}LICENSE{% endif %}  {% if license =='MIT' %}LICENSE{% endif %}
template/.devcontainer/: devcontainer.json.jinja
template/{% if ci == 'github' %}.github{% endif %}/workflows/: docs.yml.jinja  release.yml.jinja  {% if project_type == 'package' %}release.yml{% endif %}.jinja
template/{% if project_type == 'data project' %}config{% endif %}/: config.yaml
