[project]
name = "substrate"
version = "2.5.1"
requires-python = ">=3.13,<3.14"
dependencies = [
    "commitizen>=4.3.0",
    "copier>=9.4.1",
    "ruff>=0.9.3",
    "ty>=0.0.6",
]

[tool.commitizen]
bump_message = "bump: v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "uv"
